third_party/move/move-compiler-v2/tests/lambda/inline-parity/inlining1.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(f: |u64|u64,x: u64): u64 {
        (f)(x)
    }
    public fun main() {
        if Eq<u64>(Test::test(), 3) {
          Tuple()
        } else {
          Abort(5)
        };
        Tuple()
    }
    public fun test(): u64 {
        Test::foo(closure#0Test::test$lambda$1(), 10)
    }
    private fun test$lambda$1(param$0: u64): u64 {
        {
          let _: u64 = param$0;
          3
        }
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(f: |u64|u64, x: u64): u64 {
        f(x)
    }
    public fun main() {
        if (test() == 3) () else abort 5;
    }
    public fun test(): u64 {
        foo(|arg0| test$lambda$1(arg0), 10)
    }
    fun test$lambda$1(param$0: u64): u64 {
        let _ = param$0;
        3
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/inlining1.move:4:9
  │
4 │         f(x)
  │         ^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/inlining1.move:8:13
  │
8 │         foo(|_| 3, 10)
  │             ^^^^^
